--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
     "immer": "^10.1.1",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.383.0",
     "next": "15.3.2",
