--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
+    "react-qr-code": "^2.0.18",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.17",
