--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-qr-code": "^2.0.18",
     "socket.io-client": "^4.8.1",
