--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.1",
@@ -30,6 +31,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.1.3",
     "immer": "^10.1.1",
     "jsonwebtoken": "^9.0.2",
@@ -38,6 +40,7 @@
     "next": "15.3.2",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
